Fix the overflow issue

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -71,9 +71,7 @@ main.main-sidebar {
   }
 
   main.main-sidebar {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 1em;
+    display: block;
   }
 }
 
